--- a/src/app/components/CardEpisodes/styles.module.css
+++ b/src/app/components/CardEpisodes/styles.module.css
@@ -3,7 +3,7 @@
     width: 300px;
     height: 200px;
     border-radius: 8px;
-    background-color: #9b3c9b;
+    background-color: #ff00ff8a;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.2s ease-in-out;
     margin-right: 10px; /* Ajusta la separación horizontal entre los componentes */
