--- a/src/app/screens/Detail/styles.css
+++ b/src/app/screens/Detail/styles.css
@@ -1,5 +1,6 @@
 .cardDetail{
-    background-color: rgba(17, 17, 19, 0.89);
+    background-color: rgba(17, 17, 19, 0.726);
+    border-radius: 30px;
     
   }
 
