--- a/src/app/screens/Episode/styles.css
+++ b/src/app/screens/Episode/styles.css
@@ -1,5 +1,6 @@
 .cardEpisode{
-    background-color: rgba(26, 26, 26, 0.993);
+    background-color: rgba(26, 26, 26, 0.548);
+    border-radius: 30px;
 }
 
 .h2-ep{
