--- a/src/app/screens/Episodes/styles.css
+++ b/src/app/screens/Episodes/styles.css
@@ -1,3 +1,4 @@
 .cardEpisodes{
-    background-color: rgba(26, 26, 26, 0.993);
+    background-color: rgba(26, 26, 26, 0.548);
+    border-radius: 30px;
 }
