--- a/src/app/screens/Home/styles.css
+++ b/src/app/screens/Home/styles.css
@@ -42,6 +42,6 @@
   }
 
   .cardHome{
-    background-color: rgba(26, 26, 26, 0.993);
-    
+    background-color: rgba(26, 26, 26, 0.534);
+    border-radius: 30px;
   }
