--- a/src/app/screens/Location/styles.css
+++ b/src/app/screens/Location/styles.css
@@ -1,5 +1,6 @@
 .cardLocation{
-    background-color: rgba(26, 26, 26, 0.993);
+    background-color: rgba(26, 26, 26, 0.507);
+    border-radius: 30px;
 }
 
 .p-d{
