--- a/src/app/screens/Locations/styles.css
+++ b/src/app/screens/Locations/styles.css
@@ -1,3 +1,4 @@
 .cardLocations{
-    background-color: rgba(26, 26, 26, 0.993);
+    background-color: rgba(26, 26, 26, 0.589);
+    border-radius: 30px;
 }
