--- a/src/app/components/Nav/styles.css
+++ b/src/app/components/Nav/styles.css
@@ -21,8 +21,8 @@ li {
   }
 
   .nav-d{
-    background-color: #333;
+    background-color: #333333a2;
     padding: 0px;
     font-family: Arial, sans-serif;
-    
+    border-radius: 30px;
   }
