--- a/src/app/components/CardLocations/styles.module.css
+++ b/src/app/components/CardLocations/styles.module.css
@@ -3,11 +3,13 @@
     width: 300px;
     height: 200px;
     border-radius: 8px;
-    background-color: #cf0b0baf;
+    background-color: #12d61be3;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.2s ease-in-out;
     margin-right: 10px; /* Ajusta la separación horizontal entre los componentes */
     margin-top: 10px;
+    max-height: 200px;
+    overflow: hidden;
   }
   
   .card:hover {
