--- a/src/app/components/Nav/styles.css
+++ b/src/app/components/Nav/styles.css
@@ -1,5 +1,5 @@
 ul {
-    display: flex; /* Aplica un contenedor flexible a la lista */
+    display: flex; 
     align-items: center;
     list-style: none;
    
