--- a/src/app/screens/Episodes/styles.css
+++ b/src/app/screens/Episodes/styles.css
@@ -2,3 +2,28 @@
     background-color: rgba(26, 26, 26, 0.548);
     border-radius: 30px;
 }
+
+.buttonp{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    background-color: #ec9209;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 45px;
+}
+
+.buttonp:hover{
+    background-color: #131813;
+}
+
+.buttonp:disabled{
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
