--- a/src/app/screens/Home/styles.css
+++ b/src/app/screens/Home/styles.css
@@ -45,3 +45,28 @@
     background-color: rgba(26, 26, 26, 0.534);
     border-radius: 30px;
   }
+
+  .buttonp1{
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    background-color: #09ec1c;
+    color: white;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-left: 45px;
+}
+
+.buttonp1:hover{
+    background-color: #131813;
+}
+
+.buttonp1:disabled{
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
