--- a/src/app/components/Artist/styles.module.css
+++ b/src/app/components/Artist/styles.module.css
@@ -3,10 +3,12 @@
   width: 400px;
   height: 300px;
   border-radius: 8px;
-  background-color: #fc0101e7;
+  background-image: url("https://static.vecteezy.com/system/resources/previews/002/071/470/non_2x/abstract-orange-and-yellow-gradient-stripes-motion-blur-on-black-background-texture-vector.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.2s ease-in-out;
-  margin-right: 15px; /* Ajusta la separación horizontal entre los componentes */
+  margin-right: 15px; 
   margin-top: 30px;
   max-height: 500px;
   overflow: hidden;
@@ -40,16 +42,16 @@
 
 h2 {
   margin-bottom: 4px;
-  font-size: 15px;
+  font-size: 10px;
   font-weight: bold;
   text-align: center;
   padding: 0px 15px 0px;
-  color: #fffafa;
+  color: #09ff00;
 }
 
 .category {
   font-size: 14px;
-  color: #0a0a0a;
+  color: #f3f3f3;
   text-align: center;
   margin-left: 0;
   padding: 0px 15px;
@@ -105,6 +107,6 @@ h2 {
 .cp{
   font-size: 14px;
   text-align: center;
-  color: #000;
+  color: #ffffff;
 }
 
