--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -33,8 +34,15 @@ body {
 }
 
 h1 {
+  font-family: 'Fredoka One', cursive;
   font-size: 3.2em;
   line-height: 1.1;
+  color: #39d2d5;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.4); 
+  -webkit-text-stroke: 2px #d0ff00;
+  text-stroke: 2px #c8ff00;
 }
 
 button {
@@ -67,4 +75,13 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+h2{
+  margin-bottom: 4px;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  padding: 0px 15px 0px;
+  color: #09ff00;
 }
